[GTK] Map munder/mover/munderover elements to Atspi::Role::Section https://bugs.webkit.org/show_bug.cgi?id=250126

Reviewed by Michael Catanzaro.

Map munder/mover/munderover elements to Atspi::Role::Section as
specified in the MathML AAM spec [1]. Currently, these elements are not
handled by AccessibilityObjectAtspi::effectiveRole(), leading to a
RELEASE_ASSERT_NOT_REACHED failure in AccessibilityObjectAtspi::role()
and a release crash. Ideally, this and other MathML AAM tests should be
written as cross-platform and cross-browser automated WPT tests but the
infrastructure is not ready yet. So for now, just add minimal test to
exercise the code fixed by this patch.

* LayoutTests/accessibility/gtk/mathml-underover-scripts-expected.txt: Added.
* LayoutTests/accessibility/gtk/mathml-underover-scripts.html: Added.
* Source/WebCore/accessibility/atspi/AccessibilityObjectAtspi.cpp:
(WebCore::AccessibilityObjectAtspi::effectiveRole const): Map to role section.

[1] https://w3c.github.io/mathml-aam

Canonical link: https://commits.webkit.org/258971@main